--- a/src/components/view/sources/sources.css
+++ b/src/components/view/sources/sources.css
@@ -1,6 +1,7 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
     height: 120px;
     overflow: auto;
